[package]
name = "prowl"
version = "0.1.0"
edition = "2021"
description = "🐱 MCP server for SQL Server — let AI agents prowl your database"
license = "MIT"
repository = "https://github.com/copycatdb/prowl"
readme = "README.md"
keywords = ["sql-server", "mcp", "database", "mssql", "ai"]
categories = ["database"]

[[bin]]
name = "prowl"
path = "src/main.rs"

[dependencies]
tabby = { git = "https://github.com/copycatdb/tabby.git", branch = "feat/azure-redirect" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
